--- a/app/src/main/res/layout/fragment_loai_course.xml
+++ b/app/src/main/res/layout/fragment_loai_course.xml
@@ -6,14 +6,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ListView
-        android:id="@+id/lvThanhVien"
+        android:id="@+id/lvLoaiCourse"
         android:dividerHeight="10dp"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fabLoaiCourse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
