--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -16,6 +16,7 @@
         android:id="@+id/txtUser"
         android:layout_gravity="center"
         android:text="Welcome!"
+        android:textSize="16dp"
         android:textStyle="bold"
         android:textAlignment="center"
         android:textColor="@color/black"
