--- a/app/src/main/res/layout/fragment_loai_course.xml
+++ b/app/src/main/res/layout/fragment_loai_course.xml
@@ -5,10 +5,21 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchLoaiCourse"
+        app:queryHint="Search LoaiCourse"
+        app:iconifiedByDefault="false"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/background_searchview"
+        android:backgroundTint="#E8CAC8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <ListView
         android:id="@+id/lvLoaiCourse"
         android:dividerHeight="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="55dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
